--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "webpack-cli": "^4.9.1"
   },
   "dependencies": {
-    "date-fns": "^2.26.0"
+    "date-fns": "^2.26.0",
+    "import-reload": "^1.0.3"
   }
 }
