--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   "homepage": "https://github.com/Appletri/todo-list#readme",
   "devDependencies": {
     "css-loader": "^6.5.1",
+    "eslint": "^8.6.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.64.4",
@@ -28,6 +31,7 @@
   },
   "dependencies": {
     "date-fns": "^2.26.0",
-    "import-reload": "^1.0.3"
+    "import-reload": "^1.0.3",
+    "lodash": "^4.17.21"
   }
 }
